# Jarvis_OS

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  DECISIONS.md  HOW_TO_USE.md  LICENSE  Launch JARVIS Console.command  Makefile  QUICKSTART.md  README.md  Talk to JARVIS.command  jarvis  pyproject.toml  pytest.ini  run_claude.sh
.claude/: launch.json  settings.json
.claude/commands/: add-plugin.md  add-tool.md  debug-voice.md  phase2-plan.md  run-checks.md
.github/workflows/: ci.yml  lint.yml
docs/: technology-audit.md
docs/api/: api-reference.md
docs/architecture/: README.md  component-diagram.md  data-flow.md  system-overview.md
docs/development/: coding-standards.md  contributing.md  setup.md
docs/plugins/: plugin-development.md
docs/roadmap/: ROADMAP.md
docs/security/: security-model.md
scripts/: boot_check.py  download_models.py  grant_permissions.sh  install_macos.sh  preflight_check.sh  serve.sh  setup.sh  smoke_test.py
src/jarvis/: __init__.py  __main__.py  cli.py  main.py
src/jarvis/ai/: __init__.py  agent.py  context_manager.py  conversation.py  llm_router.py  tool_executor.py  tools.py
src/jarvis/ai/providers/: __init__.py  base.py  claude.py  gemini.py  local.py  openai.py
src/jarvis/browser/: __init__.py  browser_manager.py  extractor.py  searcher.py
src/jarvis/config/: __init__.py  settings.py
src/jarvis/core/: __init__.py  application.py  event_bus.py  lifecycle.py  service_registry.py
src/jarvis/desktop/: __init__.py  permissions.py
src/jarvis/desktop/applications/: launcher.py
src/jarvis/desktop/automation/: keyboard.py
src/jarvis/desktop/file_system/: navigator.py
src/jarvis/desktop/screen/: capture.py
src/jarvis/integrations/: __init__.py  desktop_control.py  web_search.py
src/jarvis/logging/: __init__.py  setup.py
src/jarvis/memory/: __init__.py  conversation_history.py  knowledge_store.py  long_term.py  memory_manager.py  short_term.py  user_preferences.py
src/jarvis/plugins/: __init__.py  base.py  registry.py
src/jarvis/plugins/examples/: calendar_plugin.py  terminal_plugin.py
src/jarvis/security/: __init__.py  audit_log.py  credential_store.py
src/jarvis/ui/: __init__.py
src/jarvis/ui/design_system/: colors.py  typography.py
src/jarvis/ui/windows/: main_window.py
src/jarvis/voice/: __init__.py  audio_pipeline.py
src/jarvis/voice/stt/: transcriber.py
src/jarvis/voice/tts/: synthesizer.py
src/jarvis/voice/wake_word/: detector.py
src/jarvis/web/: __init__.py  server.py
tests/: conftest.py
tests/unit/test_ai/: test_agent.py  test_conversation.py  test_llm_router.py  test_providers.py  test_tools.py
tests/unit/test_core/: test_application_ask.py  test_event_bus.py
tests/unit/test_integrations/: test_desktop_control.py  test_web_search.py
tests/unit/test_memory/: test_memory_manager.py  test_short_term.py
tests/unit/test_security/: test_permissions.py
tests/unit/test_web/: test_server.py
